--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,17 +1,16 @@
 [tool.poetry]
-name = "nyc-ride-duration-prediction"
+name = "data-talks-club"
 version = "0.1.0"
-description = "Prediction of ride duration of NYC Dataset"
+description = "MLOps Zoomcamp - NYC Ride Duration Prediction"
 authors = ["Bertan ULUSOY <bertan_ulusoy@yahoo.com>"]
 readme = "README.md"
-packages = [{include = "nyc_ride_duration_prediction"}]
 
 [tool.poetry.dependencies]
-python = "^3.9"
-pandas = "^2.0.1"
-numpy = "^1.24.3"
-pyarrow = "^12.0.0"
-fastparquet = "^2023.4.0"
+python = "^3.12"
+numpy = "^1.26.4"
+pandas = "^2.2.2"
+pyarrow = "^16.1.0"
+fastparquet = "^2024.2.0"
 
 
 [build-system]
