--- a/.gitignore
+++ b/.gitignore
@@ -79,7 +79,7 @@ target/
 .ipynb_checkpoints/
 
 # exclude data from source control by default
-/data/
+/2024/data/
 
 # Mac OS-specific storage files
 .DS_Store
