--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ numpy = "^1.26.4"
 pandas = "^2.2.2"
 pyarrow = "^16.1.0"
 fastparquet = "^2024.2.0"
+seaborn = "^0.13.2"
+matplotlib = "^3.9.0"
 
 
 [build-system]
